--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
       errors.push({
         field: 'txtMyClientNumber_field',
         label: 'Client number',
-        message: 'Please enter a valid 8 digit client number.'
+        message: 'This is required.'
       });
     }
 
@@ -545,3 +545,4 @@ WebForm_OnSubmit = function() {
 	<input type="hidden" id="SC_MEDIAMIND_ID" name="SC_MEDIAMIND_ID" value=""/><input type="hidden" id="SC_PRODUCT_ID" name="SC_PRODUCT_ID" value=""/><input type="hidden" id="SC_CUSTOMER_TYPE" name="SC_CUSTOMER_TYPE" value="NetBank"/><input type="hidden" id="SC_SCREEN_NAME" name="SC_SCREEN_NAME" value=""/>
 </body>
 </html>
+
