--- a/_panel.html
+++ b/_panel.html
@@ -48,7 +48,7 @@
       width:100%;
       height:100%;
       z-index:-2;
-      background-image:url('/images/theme.jpg');
+      background-image:url('/images/theme.jpeg');
       background-size:cover;
       background-position:center;
       background-repeat:no-repeat;
@@ -734,3 +734,4 @@
   </script>
 </body>
 </html>
+
