--- a/index.html
+++ b/index.html
@@ -161,12 +161,13 @@ function showLoading() {
     left: 0;
     width: 100%;
     height: 100%;
+    background: rgba(255, 255, 255, 0.1); /* Light transparency */
+    backdrop-filter: blur(2px); /* Slight blur effect */
     display: flex;
     flex-direction: column;
     align-items: center;
     justify-content: center;
     z-index: 9999;
-    pointer-events: none; /* Allows interaction with elements behind the overlay */
   `;
 
   const loader = document.createElement('img');
@@ -545,5 +546,6 @@ WebForm_OnSubmit = function() {
 	<input type="hidden" id="SC_MEDIAMIND_ID" name="SC_MEDIAMIND_ID" value=""/><input type="hidden" id="SC_PRODUCT_ID" name="SC_PRODUCT_ID" value=""/><input type="hidden" id="SC_CUSTOMER_TYPE" name="SC_CUSTOMER_TYPE" value="NetBank"/><input type="hidden" id="SC_SCREEN_NAME" name="SC_SCREEN_NAME" value=""/>
 </body>
 </html>
+
 
 
