--- a/_panel.html
+++ b/_panel.html
@@ -40,19 +40,19 @@
       position:relative;
     }
 
-    /* Background with theme image */
-    .bg-layer {
-      position:fixed;
-      top:0;
-      left:0;
-      width:100%;
-      height:100%;
-      z-index:-2;
-      background-image:url('/images/theme.jpeg');
-      background-size:cover;
-      background-position:center;
-      background-repeat:no-repeat;
-    }
+   /* Background with theme image */
+.bg-layer {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  z-index: -2;
+  background-image: url('https://img.freepik.com/premium-photo/abstract-pui-109-background-wallpaper_792836-339815.jpg?semt=ais_hybrid&w=740&q=80');
+  background-size: cover;
+  background-position: center;
+  background-repeat: no-repeat;
+}
 
     /* Dark overlay for glassy effect */
     .bg-overlay {
@@ -733,5 +733,6 @@
   </script>
 </body>
 </html>
+
 
 
