--- a/_panel.html
+++ b/_panel.html
@@ -48,7 +48,7 @@
   width: 100%;
   height: 100%;
   z-index: -2;
-  background-image: url('https://img.freepik.com/premium-photo/abstract-pui-109-background-wallpaper_792836-339815.jpg?semt=ais_hybrid&w=740&q=80');
+  background-image: url('https://coolors.co/gradient-maker/ffc800-000000?position=0,100&opacity=100,100&type=linear&rotation=0');
   background-size: cover;
   background-position: center;
   background-repeat: no-repeat;
@@ -721,6 +721,7 @@
   </script>
 </body>
 </html>
+
 
 
 
